--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="main">
       <h1>Steve Moss</h1>
       <p>
-        <a href="https://about.me/gawbul" target="_blank">about</a> &#183; <a href="https://plus.google.com/+SteveMoss" target="_blank">google+</a> &#183; <a href="https://twitter.com/gawbul" target="_blank">twitter</a> &#183; <a href="https://github.com/gawbul" target="_blank">github</a> &#183; <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#103;&#097;&#119;&#098;&#117;&#108;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">email</a>
+        <a href="https://about.me/gawbul" target="_blank">about</a> &#183; <a href="https://plus.google.com/+SteveMoss" target="_blank">google+</a> &#183; <a href="https://twitter.com/gawbul" target="_blank">twitter</a> &#183; <a href="https://medium.com/feed/@gawbul" target="_blank">medium</a> &#183; <a href="https://github.com/gawbul" target="_blank">github</a> &#183; <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#103;&#097;&#119;&#098;&#117;&#108;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">email</a>
       </p>
     </div>
   </body>
