--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Steve Moss</title>
+    <title>Dr. Steve Moss</title>
     <link rel="stylesheet" href="normalize.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -18,9 +18,9 @@
   </head>
   <body>
     <div id="main">
-      <h1>Steve Moss</h1>
+      <h1>Dr. Steve Moss</h1>
       <p>
-        <a href="https://about.me/gawbul" target="_blank">about</a> &#183; <a href="https://plus.google.com/+SteveMoss" target="_blank">google+</a> &#183; <a href="https://twitter.com/gawbul" target="_blank">twitter</a> &#183; <a href="https://medium.com/@gawbul" target="_blank">medium</a> &#183; <a href="https://github.com/gawbul" target="_blank">github</a> &#183; <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#103;&#097;&#119;&#098;&#117;&#108;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">email</a>
+        <a href="https://about.me/gawbul" target="_blank">about</a> &#183; <a href="https://plus.google.com/+SteveMoss" target="_blank">google+</a> &#183; <a href="https://twitter.com/gawbul" target="_blank">twitter</a> &#183; <a href="https://uk.linkedin.com/in/stephenpmoss" target="_blank">linkedin</a> &#183; <a href="https://medium.com/@gawbul" target="_blank">medium</a> &#183; <a href="https://github.com/gawbul" target="_blank">github</a> &#183; <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#103;&#097;&#119;&#098;&#117;&#108;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">email</a>
       </p>
     </div>
   </body>
