--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="https://plus.google.com/+SteveMoss" target="_blank">google+</a> &#183; 
         <a href="https://uk.linkedin.com/in/stephenpmoss" target="_blank">linkedin</a> &#183; 
         <a href="https://medium.com/@gawbul" target="_blank">medium</a> &#183; 
-        <a href="https://twitter.com/gawbul" target="_blank">twitter</a> &#183; 
+        <a href="https://twitter.com/gawbul" target="_blank">twitter</a>
       </p>
     </div>
   </body>
