--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a href="https://github.com/gawbul" target="_blank">github</a> &#183; 
         <a href="https://plus.google.com/+SteveMoss" target="_blank">google+</a> &#183; 
         <a href="https://medium.com/@gawbul" target="_blank">medium</a> &#183; 
+        <a href="https://scholar.google.co.uk/citations?hl=en&user=KD8T2ZwAAAAJ" target="_blank">scholar</a> &#183; 
         <a href="https://twitter.com/gawbul" target="_blank">twitter</a>
       </p>
     </div>
