--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Dr. Steve Moss</title>
+    <meta name="description" content="The homepage of Dr. Stephen P. Moss, PhD - Bioinformatics, Genomics and Molecular Evolution">
+    <meta name="keywords" content="bioinformatics,genomics,molecular evolution,computational science,phd,python">
+    <meta name="author" content="Steve Moss">
+    <title>Dr. Stephen P. Moss, PhD - Computational Scientist</title>
     <link rel="stylesheet" href="normalize.min.css">
     <link rel="stylesheet" href="style.css">
 
