--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Dr. Stephen P. Moss, PhD - Computational Scientist</title>
     <link rel="stylesheet" href="normalize.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="canonical" href="https://www.gawbul.io">
+    <link rel="canonical" href="https://www.gawbul.io/index.html">
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
