Updated home page to include images, and change links to images instead.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="The homepage of Dr. Stephen P. Moss, PhD - Bioinformatics, Genomics and Molecular Evolution">
-    <meta name="keywords" content="bioinformatics,genomics,molecular evolution,computational science,phd,python">
-    <meta name="author" content="Steve Moss">
-    <title>Dr. Stephen P. Moss, PhD - Computational Scientist</title>
-    <link rel="stylesheet" href="normalize.min.css">
-    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="The homepage of Stephen P. Moss, Ph.D. - Bioinformatics, Genomics and Molecular Evolution">
+    <meta name="keywords" content="bioinformatics,genomics,evolution,molecular evolution,computational science,science,medicine,research,computing,phd">
+    <meta name="author" content="Stephen Moss">
+    <title>Stephen P. Moss, Ph.D. - Computational Scientist</title>
+    <link rel="stylesheet" href="normalize.min.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro" type="text/css">
     <link rel="canonical" href="https://www.gawbul.io/index.html">
-
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -18,19 +18,39 @@
       ga('create', 'UA-50119829-1', 'gawbul.github.io');
       ga('send', 'pageview');
     </script>
-  
   </head>
   <body>
     <div id="main">
-      <h1>Dr. Steve Moss</h1>
+      <img src="images/gawbul.png" alt="Steve Moss">
+      <h1>Dr. Stephen P. Moss</h1>
       <p>
-        <a href="https://about.me/gawbul" target="_blank">about</a> &#183; 
-        <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#103;&#097;&#119;&#098;&#117;&#108;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">email</a> &#183; 
-        <a href="https://github.com/gawbul" target="_blank">github</a> &#183; 
-        <a href="https://uk.linkedin.com/in/stephenpmoss" target="_blank">linkedin</a> &#183; 
-        <a href="https://medium.com/@gawbul" target="_blank">medium</a> &#183; 
-        <a href="https://scholar.google.co.uk/citations?hl=en&user=KD8T2ZwAAAAJ" target="_blank">scholar</a> &#183; 
-        <a href="https://twitter.com/gawbul" target="_blank">twitter</a>
+        <a href="https://about.me/gawbul" target="_blank">
+          <img src="images/aboutme.png" alt="about.me" width="48" height="48">
+        </a>
+        &#183;
+        <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#103;&#097;&#119;&#098;&#117;&#108;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">
+          <img src="images/gmail.png" alt="Gmail" width="48" height="48">
+        </a>
+        &#183;
+        <a href="https://github.com/gawbul" target="_blank">
+          <img src="images/github.png" alt="GitHub" width="48" height="48">
+        </a>
+        &#183;
+        <a href="https://uk.linkedin.com/in/stephenpmoss" target="_blank">
+          <img src="images/linkedin.png" alt="LinkedIn" width="48" height="48">
+        </a>
+        &#183;
+        <a href="https://medium.com/@gawbul" target="_blank">
+          <img src="images/medium.png" alt="Medium" width="48" height="48">
+        </a>
+        &#183;
+        <a href="https://scholar.google.co.uk/citations?hl=en&user=KD8T2ZwAAAAJ" target="_blank">
+          <img src="images/googlescholar.png" alt="Google Scholar" width="48" height="48">
+        </a>
+        &#183;
+        <a href="https://twitter.com/gawbul" target="_blank">
+          <img src="images/twitter.png" alt="Twitter" width="48" height="48">
+        </a>
       </p>
     </div>
   </body>
