--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="bioinformatics,genomics,evolution,molecular evolution,computational science,science,medicine,research,computing,phd">
     <meta name="author" content="Stephen Moss">
     <title>Stephen P. Moss, Ph.D. - Computational Scientist</title>
+    <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="normalize.min.css" type="text/css">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro" type="text/css">
