Add Keybase to index page links

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
           <img src="images/github.png" alt="GitHub" width="48" height="48">
         </a>
         &#183;
+        <a href="https://keybase.io/gawbul" target="_blank">
+          <img src="images/keybase.png" alt="Keybase" width="48" height="48">
+        </a>
+        &#183;
         <a href="https://uk.linkedin.com/in/stephenpmoss" target="_blank">
           <img src="images/linkedin.png" alt="LinkedIn" width="48" height="48">
         </a>
