Add details of broad career focus. Add copyright notice.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
   <body>
     <div id="main">
       <img src="images/gawbul.png" alt="Steve Moss">
-      <h1>Dr. Stephen P. Moss</h1>
+      <h1>Dr Stephen P. Moss</h1>
+      <h2>
+      	Scientist | Technologist | Engineer
+      </h2>
       <p>
         <a href="https://about.me/gawbul" target="_blank">
           <img src="images/aboutme.png" alt="about.me" width="48" height="48">
@@ -57,6 +60,9 @@
         <a href="https://twitter.com/gawbul" target="_blank">
           <img src="images/twitter.png" alt="Twitter" width="48" height="48">
         </a>
+      </p>
+      <p>
+        &#169; 2020 Dr Stephen P. Moss. All rights reserved.
       </p>
     </div>
   </body>
