Minor update to formatting and tag order.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="The homepage of Stephen P. Moss, Ph.D. - Bioinformatics, Genomics and Molecular Evolution">
-    <meta name="keywords" content="bioinformatics,genomics,evolution,molecular evolution,computational science,science,medicine,research,computing,phd">
+    <meta name="keywords" content="bioinformatics,genomics,molecular evolution,evolution,computational science,science,medicine,research,computing,phd">
     <meta name="author" content="Stephen Moss">
     <title>Stephen P. Moss, Ph.D. - Computational Scientist</title>
     <link rel="icon" href="favicon.png" type="image/png">
@@ -17,7 +17,6 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-    
       gtag('config', 'UA-50119829-1');
     </script>
   </head>
@@ -25,9 +24,7 @@
     <div id="main">
       <img src="images/gawbul.png" alt="Steve Moss">
       <h1>Dr Stephen P. Moss</h1>
-      <h2>
-      	Scientist | Technologist | Engineer
-      </h2>
+      <h2>Scientist | Technologist | Engineer</h2>
       <p>
         <a href="https://about.me/gawbul" target="_blank">
           <img src="images/aboutme.png" alt="about.me" width="48" height="48">
