Add titles to images for mouse over.

--- a/index.html
+++ b/index.html
@@ -27,39 +27,39 @@
       <h2>Scientist | Technologist | Engineer</h2>
       <p>
         <a href="https://about.me/gawbul" target="_blank">
-          <img src="images/aboutme.png" alt="about.me" width="48" height="48">
+          <img src="images/aboutme.png" alt="about.me" title="about.me" width="48" height="48">
         </a>
         &#183;
         <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#103;&#097;&#119;&#098;&#117;&#108;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">
-          <img src="images/gmail.png" alt="Gmail" width="48" height="48">
+          <img src="images/gmail.png" alt="Gmail" title="Gmail" width="48" height="48">
         </a>
         &#183;
         <a href="https://github.com/gawbul" target="_blank">
-          <img src="images/github.png" alt="GitHub" width="48" height="48">
+          <img src="images/github.png" alt="GitHub" title="GitHub" width="48" height="48">
         </a>
         &#183;
         <a href="https://keybase.io/gawbul" target="_blank">
-          <img src="images/keybase.png" alt="Keybase" width="48" height="48">
+          <img src="images/keybase.png" alt="Keybase" title="Keybase" width="48" height="48">
         </a>
         &#183;
         <a href="https://uk.linkedin.com/in/stephenpmoss" target="_blank">
-          <img src="images/linkedin.png" alt="LinkedIn" width="48" height="48">
+          <img src="images/linkedin.png" alt="LinkedIn" title="LinkedIn" width="48" height="48">
         </a>
         &#183;
         <a href="https://medium.com/@gawbul" target="_blank">
-          <img src="images/medium.png" alt="Medium" width="48" height="48">
+          <img src="images/medium.png" alt="Medium" title="Medium" width="48" height="48">
         </a>
         &#183;
         <a href="https://scholar.google.co.uk/citations?hl=en&user=KD8T2ZwAAAAJ" target="_blank">
-          <img src="images/googlescholar.png" alt="Google Scholar" width="48" height="48">
+          <img src="images/googlescholar.png" alt="Google Scholar" title="Google Scholar" width="48" height="48">
         </a>
         &#183;
         <a href="https://www.tiktok.com/@gawbul" target="_blank">
-          <img src="images/tiktok.png" alt="TikTok" width="48" height="48">
+          <img src="images/tiktok.png" alt="TikTok" title="TikTok" width="48" height="48">
         </a>
         &#183;
         <a href="https://twitter.com/gawbul" target="_blank">
-          <img src="images/twitter.png" alt="Twitter" width="48" height="48">
+          <img src="images/twitter.png" alt="Twitter" title="Twitter" width="48" height="48">
         </a>
       </p>
       <p style="font-size:75%;">
