--- a/index.html
+++ b/index.html
@@ -41,9 +41,14 @@
         <a href="https://keybase.io/gawbul" target="_blank">
           <img src="images/keybase.png" alt="Keybase" title="Keybase" width="48" height="48">
         </a>
+
         &#183;
-        <a href="https://uk.linkedin.com/in/stephenpmoss" target="_blank">
-          <img src="images/linkedin.png" alt="LinkedIn" title="LinkedIn" width="48" height="48">
+        <a href="https://keybase.io/gawbul" target="_blank">
+          <img src="images/keybase.png" alt="Keybase" title="Keybase" width="48" height="48">
+        </a>
+        &#183;
+        <a href="https://www.instagram.com/gawbul" target="_blank">
+          <img src="images/instagram.png" alt="Instagram" title="Instagram" width="48" height="48">
         </a>
         &#183;
         <a href="https://medium.com/@gawbul" target="_blank">
