--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
           <img src="images/aboutme.png" alt="about.me" title="about.me" width="48" height="48">
         </a>
         &#183;
+        <a href="https://www.facebook.com/gawbul" target="_blank">
+          <img src="images/facebook.png" alt="Facebook" title="Facebook" width="48" height="48">
+        </a>
+        &#183;
         <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#103;&#097;&#119;&#098;&#117;&#108;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">
           <img src="images/gmail.png" alt="Gmail" title="Gmail" width="48" height="48">
         </a>
