--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="main">
       <img src="images/gawbul.png" alt="Steve Moss">
       <h1>Dr Stephen P. Moss</h1>
-      <h2>Scientist | Technologist | Engineer | Leader</h2>
+      <h2>Scientist | Technologist | Engineer</h2>
       <p>
         <a href="https://about.me/gawbul" target="_blank">
           <img src="images/aboutme.png" alt="about.me" title="about.me" width="32" height="32">
