--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
           <img src="images/medium.png" alt="Medium" title="Medium" width="32" height="32">
         </a>
         &#183;
+        <a rel="me" href="https://genomic.social/@gawbul">
+          <img src="images/mastodon.png" alt="Mastodon" title="Mastodon" width="32" height="32">
+        </a>
+        &#183;
         <a href="https://scholar.google.co.uk/citations?hl=en&user=KD8T2ZwAAAAJ" target="_blank">
           <img src="images/googlescholar.png" alt="Google Scholar" title="Google Scholar" width="32" height="32">
         </a>
