Update X logo and add Threads link.

--- a/index.html
+++ b/index.html
@@ -46,10 +46,6 @@
           <img src="images/linkedin.png" alt="LinkedIn" title="LinkedIn" width="32" height="32">
         </a>
         &#183;
-        <a rel="me" href="https://genomic.social/@gawbul">
-          <img src="images/mastodon.png" alt="Mastodon" title="Mastodon" width="32" height="32">
-        </a>
-        &#183;
         <a href="https://medium.com/@gawbul" target="_blank">
           <img src="images/medium.png" alt="Medium" title="Medium" width="32" height="32">
         </a>
@@ -58,8 +54,12 @@
           <img src="images/googlescholar.png" alt="Google Scholar" title="Google Scholar" width="32" height="32">
         </a>
         &#183;
+        <a href="https://www.threads.net/@gawbul" target="_blank">
+          <img src="images/threads.png" alt="Threads" title="Threads" width="32" height="32">
+        </a>
+        &#183;
         <a href="https://twitter.com/gawbul" target="_blank">
-          <img src="images/twitter.png" alt="Twitter" title="Twitter" width="32" height="32">
+          <img src="images/x.png" alt="Twitter/X" title="Twitter/X" width="32" height="32">
         </a>
       </p>
       <p style="font-size:75%;">
