--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div id="main">
-      <img src="images/gawbul.png" alt="Steve Moss">
+      <img src="images/gawbul.png" alt="Steve Moss" width="600" height="450">
       <h1>Dr Stephen P. Moss</h1>
       <h2>Scientist | Technologist | Engineer</h2>
       <p>
