chore: add back favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             name="description"
             content="I help companies deploy their code into production. I write about distributed systems, tooling, and best practices."
         />
+        <link rel="icon" href="favicon.png" type="image/png" />
         <link rel="stylesheet" href="assets/main.css" />
         <link rel="canonical" href="https://gawbul.io/" />
         <link
