chore: update wording

--- a/index.html
+++ b/index.html
@@ -231,12 +231,13 @@
                         </p>
                         <p>
                             I graduated from the University of Hull, where I
-                            taught bioinformatics skills to staff and students
-                            as part of the
+                            taught bioinformatics and Linux skills to staff and
+                            students as part of the
                             <a href="https://www.davelunt.net/" target="_blank"
                                 >Lunt Lab</a
-                            >. The courses I taught became the foundation for
-                            several blog posts and articles on
+                            >. It is my aim to use the content of the courses I
+                            taught as the foundation for several blog posts and
+                            articles on
                             <a href="https://gawbul.medium.com/" target="_blank"
                                 ><strong>Medium</strong></a
                             >. You can view my thesis
@@ -255,14 +256,15 @@
                                 href="https://www.kubernetes.dev/"
                                 target="_blank"
                                 >Kubernetes community</a
-                            >, participating in discussions and enabling the
-                            smooth running of the infrastructure as part of
+                            >, participating in discussions and aiming to enable
+                            the smooth running of the infrastructure as part of
                             <a
                                 href="https://github.com/kubernetes/community/tree/master/sig-k8s-infra"
                                 target="_blank"
                                 >SIG K8s-Infra</a
                             >. It is my goal to become a Kubernetes expert by
-                            achieving all certifications required for the
+                            gaining the knowledge needed to achieve all
+                            certifications required for the
                             <a
                                 href="https://www.cncf.io/training/kubestronaut/"
                                 target="_blank"
