--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
                             >
                             and aspire to become a tech influencer on
                             <a
-                                href="https://instagram.com/gawbul"
+                                href="https://www.linkedin.com/in/gawbul"
                                 target="_blank"
-                                >Instagram</a
+                                >LinkedIn</a
                             >. You can also find me on
                             <a
                                 href="https://scholar.google.com/citations?user=KD8T2ZwAAAAJ&hl=en"
