chore: update wording

--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
                             <a href="https://github.com/gawbul" target="_blank"
                                 >GitHub</a
                             >
-                            and aspire to become a tech influencer on
+                            and aspire to become a tech blogger on
                             <a
-                                href="https://www.linkedin.com/in/gawbul"
+                                href="https://gawbul.medium.com/"
                                 target="_blank"
-                                >LinkedIn</a
+                                >Medium</a
                             >. You can also find me on
                             <a
                                 href="https://scholar.google.com/citations?user=KD8T2ZwAAAAJ&hl=en"
