fix: use correct dateformat

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -48,7 +48,7 @@
   
   <div class="d-flex flex-column flex-md-row justify-content-between">
     <h6 class="text-start meta">
-       PUBLISHED ON 10 OCTOBER 10970
+       PUBLISHED ON 2025-10-25 13:20:32
       
       / 1 MIN READ
       
