chore: update name

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
   
   
 
-  <h1 class="author mt-3">Steve Moss</h1>
+  <h1 class="author mt-3">Dr Steve Moss</h1>
 </header>
 
 <section id="info-pane" class="text-center info">
@@ -141,7 +141,7 @@
 {
   "@context": "http://schema.org",
   "@type": "Person",
-  "name": "Steve Moss",
+  "name": "Dr Steve Moss",
   "url": "",
   "sameAs": [
     
