chore: update description

--- a/public/index.html
+++ b/public/index.html
@@ -56,12 +56,10 @@
 
 <section id="info-pane" class="text-center info">
   
-  <h3 class="intro">Scientist | Technologist | Engineer | Technical Leader</h3>
+  <h3 class="intro">Scientist | Technologist | Engineer | Leader</h3>
   
   
-  <h4 class="description"><p>I help companies deploy their code into production.</p>
-<p>I write about distributed systems, tooling, and best practices.</p>
-</h4>
+  <h4 class="description">I help companies deploy their code into production</h4>
   
 </section>
 
