fix: use correct stackoverflow

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
   <a href="https://linkedin.com/in/gawbul" aria-label="LinkedIn" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
   
   
-  <a href="https://stackoverflow.com/users/gawbul" aria-label="StackOverflow" target="_blank"><i class="fab fa-stack-overflow" aria-hidden="true"></i></a>
+  <a href="https://stackoverflow.com/users/393634/gawbul" aria-label="StackOverflow" target="_blank"><i class="fab fa-stack-overflow" aria-hidden="true"></i></a>
   
   
   <a href="https://medium.com/gawbul" aria-label="Medium" target="_blank"><i class="fab fa-medium" aria-hidden="true"></i></a>
@@ -151,7 +151,7 @@
     "https://github.com/gawbul",
     "https://instagram.com/gawbul",
     "https://linkedin.com/in/gawbul",
-    "https://stackoverflow.com/users/gawbul",
+    "https://stackoverflow.com/users/393634\/gawbul",
     "https://medium.com/gawbul",
     
     
